Header behaviour and drop down tab overflow still needs fixing but everything else is sorted out at this point

--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -214,6 +214,7 @@
     top: -3px;
     left: 1px;
     
+    
 
     width: 23px;
     height: 23px;
@@ -231,7 +232,10 @@
 }
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    .slick-dots li.slick-active button::after{
-        top: 17px;
+    .slick-dots li.slick-active button::after
+    {
+        top: -4px;
+        left: 1px;
     }
+    
 }
