--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,9 +18,7 @@ $security-drop-bg: #de093f;
 $mm_panelPadding: 30px 30px;
 
 //FONTAWESOME SVG Reformatting
-.supportIcon{
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='1.75rem' height='1.75rem' viewBox='0 0 512 512'%3E%3C!-- Font Awesome Free 5.15.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --%3E%3Cpath d='M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z'/%3E%3C/svg%3E");
-}
+
 
 
 
@@ -185,13 +183,11 @@ $hamburger-types: (
                    
                 }
                 & > .cookie-bottom{
-                    padding: 10px 0px;
-                    //display: flex;
-                    //justify-content: space-around;  
+                    padding: 20px 0;
                     & > .cookie-button{
                         display: block;
                         width: 90%;
-                        margin: 15px auto;
+                        margin-top: 10px;
                         height: 50px;
                         border:none;
                         color: white;
@@ -231,7 +227,7 @@ $hamburger-types: (
     height: 100vh;
     width: 100vw;
     overflow-y: scroll;
-    //overflow-x: hidden;
+    overflow-x: hidden;
     
 }
 
@@ -262,7 +258,7 @@ $hamburger-types: (
     transition: transform .2s ease, -webkit-transform .2s ease;
     // -webkit-transform: translate3d(0, -100%, 0);
     // transform: translate3d(0, -100%, 0);
-    visibility: hidden;
+    
 }
 
 .header{
@@ -519,8 +515,8 @@ $hamburger-types: (
                 & > .dd-background{
                     display: none;
                     padding: 22px 0px;
-                    z-index: 21;
                     position:absolute;
+                    z-index:20;
                     top: 100%;
                     width: 200vw;
                     @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
@@ -533,7 +529,7 @@ $hamburger-types: (
                     display:none;
                     flex-direction: row;
                     position:absolute;
-                    z-index: 22;
+                    z-index:21;
                     top: 100%;
                     left: 0%;
                     width: 100vw;
@@ -1519,7 +1515,7 @@ $hamburger-types: (
 //Newsletter styles
 .newsletter{
     background-color: #ddd;
-    height: 400px;
+    //height: 400px;
 }
 
 .sign-up-form{
